--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
         background-size: 100% 100%;
       }
       .messages {
-        height: calc(100vh - 50px);
+        height: calc(100% - 50px);
         overflow: scroll;
+        position: absolute;
+        width: 100%;
       }
    </style>
    <script>
