--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         position: absolute;
         width: 100%;
         nobackground: lightgray;
-        background: url(./imgs/leaf.png);
+        nobackground: url(./imgs/leaf.png);
         background-size: 200px 200px;
         background-repeat: no-repeat;
         background-color: whitesmoke;
