--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>SBC</title>
+      <link rel="icon" href="./imgs/logo.png" type="image/x-icon"/>
+      <link rel="shortcut icon" href="./imgs/logo.png" type="image/x-icon"/>
+      <title>SECURE CHAT</title>
    </head>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.3/socket.io.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
-   <style type="text/css">
-     
-   </style>
 
    <style type="text/css">
       body {
@@ -350,7 +349,6 @@
 
    <body>
       <div id="app" style="display:none;">
-         <!-- <img :src="dataObj.canvasUrl" @load="sendImage(this)"><img> -->
          <canvas id="canvas"></canvas>
          <div class="settings" v-if="dataObj.status=='settings'">
             <div>Online users -  {{dataObj.countUsers}}</div>
